<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:aapt="http://schemas.android.com/aapt"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_color">

    <ScrollView
        android:scrollbars="none"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        
        android:background="@drawable/shape"

        >

        <RelativeLayout
            android:id="@+id/rell1"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="@dimen/mrgn10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <ImageView
                android:id="@+id/gender_icon"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@mipmap/user"/>


            <TextView
                android:layout_toRightOf="@+id/gender_icon"
                android:fontFamily="@font/gothic"
                android:layout_width="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:gravity="center_horizontal"
                android:text="@string/gender"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />


        </RelativeLayout>

        <LinearLayout
            android:id="@+id/ll1"
            android:layout_below="@+id/rell1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal"
            android:weightSum="3.5">

            <RadioGroup

                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2.4"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/male"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.1"
                    android:checked="true"
                    android:text="@string/male"
                    android:textColor="@color/black"
                    android:textSize="16dp"
                    android:textStyle="normal" />

                <RadioButton
                    android:id="@+id/female"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.35"
                    android:checked="false"
                    android:text="@string/female"
                    android:textColor="@color/black"
                    android:textSize="16dp"
                    android:textStyle="normal" />
            </RadioGroup>
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/rell2"
            android:layout_marginLeft="10dp"
            android:layout_below="@+id/ll1"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <ImageView
                android:id="@+id/age_icon"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@mipmap/user"/>


            <TextView
                android:layout_toRightOf="@+id/age_icon"
                android:fontFamily="@font/gothic"
                android:layout_width="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:gravity="center_horizontal"
                android:text="@string/age"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:textStyle="bold" />


        </RelativeLayout>

        <LinearLayout
            android:id="@+id/ll2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rell2"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal"
            android:weightSum="5">




            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:gravity="center_horizontal"
                android:text=""
                android:textColor="@color/black"
                android:textSize="16dp"
                android:textStyle="normal" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:orientation="horizontal"
                android:weightSum="2">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal">

                    <EditText
                        android:id="@+id/year"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:gravity="center"
                        android:inputType="number"
                        android:maxLength="3"
                        android:textColor="#000000"
                        android:textSize="16dp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        <RelativeLayout
            android:id="@+id/rell3"
            android:layout_marginLeft="10dp"
            android:layout_below="@+id/ll2"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <ImageView
                android:id="@+id/hight_icon"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@mipmap/user"/>


            <TextView
                android:layout_toRightOf="@+id/hight_icon"
                android:fontFamily="@font/gothic"
                android:layout_width="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:gravity="center_horizontal"
                android:text="@string/height"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:textStyle="bold" />


        </RelativeLayout>


        <LinearLayout
            android:id="@+id/ll3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rell3"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal"
            android:weightSum="5">



            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3.25"
                android:orientation="horizontal"
                android:weightSum="2">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.35"
                        android:text="@string/ft"
                        android:textColor="@color/black"
                        android:textSize="16dp"
                        android:textStyle="normal" />

                    <EditText
                        android:id="@+id/feet"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:gravity="center"
                        android:inputType="number"
                        android:maxLength="1"
                        android:textColor="#000000"
                        android:textSize="16dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.3"
                        android:text="@string/in"
                        android:textColor="@color/black"
                        android:textSize="16dp"
                        android:textStyle="normal" />

                    <EditText
                        android:id="@+id/inches"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:gravity="center"
                        android:inputType="number"
                        android:maxLength="2"
                        android:textColor="#000000"
                        android:textSize="16dp" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.1" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/rell4"
            android:layout_marginLeft="10dp"
            android:layout_below="@+id/ll3"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <ImageView
                android:id="@+id/weight_icon"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@mipmap/user"/>


            <TextView
                android:layout_toRightOf="@+id/weight_icon"
                android:fontFamily="@font/gothic"
                android:layout_width="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:gravity="center_horizontal"
                android:text="@string/weight"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:textStyle="bold" />


        </RelativeLayout>
        <LinearLayout
            android:id="@+id/ll4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rell4"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal"
            android:weightSum="5">



            <EditText
                android:id="@+id/weight"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.25"
                android:gravity="center"
                android:inputType="number"
                android:maxLength="3"
                android:textColor="#000000"
                android:textSize="16dp" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:weightSum="2">

                    <RadioGroup
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/kg"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:checked="true"
                            android:gravity="center"
                            android:text="@string/kg"
                            android:textColor="@color/black"
                            android:textSize="16dp"
                            android:textStyle="normal" />

                        <RadioButton
                            android:id="@+id/lbs"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:checked="false"
                            android:gravity="center"
                            android:text="@string/lb"
                            android:textColor="@color/black"
                            android:textSize="16dp"
                            android:textStyle="normal" />
                    </RadioGroup>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@drawable/a1_grad"
            android:layout_above="@+id/ll5"
            />
        <LinearLayout
            android:id="@+id/ll5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ll4"
            android:layout_margin="5dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/calculate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_margin="10dp"
                android:padding="@dimen/mrgn10"
                android:background="@drawable/a3_grad"
                android:text="    Calculate    "
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textStyle="normal" />
        </LinearLayout>
    </RelativeLayout>

    </ScrollView>
</RelativeLayout>
